
cc_library(
	name = "type_traits",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_core//:core"
	],
)
