load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/type_traits/*.hpp",
    "include/boost/utility/*.hpp",
]

cc_library(
    name = "type_traits_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "type_traits",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":type_traits_internal",
        "@boost//static_assert",
    ],
)
